# rubeus-smartcontract

./: Cargo.toml  README.md  lib.rs
example/: package.json  tsconfig.json
example/src/: contract.metadata.ts  e2e-test.ts  example.ts  rubeus.wasm  utils.ts
