[package]
name = "rubeus"
version = "0.1.0"
authors = ["[Anton Shramko] <[antonshramko@yandex.ru]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-beta", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[lib]
name = "rubeus"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
